[package]
name = "dotup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
clap = { version="4.4.11", features = ["derive"]}
env_logger = "0.10.1"
log = "0.4.20"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version="1.0.193", features=["derive"]}
serde_derive = "1.0.193"
serde_json = "1.0.108"
toml = "0.8.8"
